@@ -6,9 +6,7 @@ import ok.dht.ServiceConfig;
 import java.io.IOException;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.util.ArrayList;
 import java.util.Collections;
-import java.util.List;
 import java.util.concurrent.ExecutionException;
 import java.util.concurrent.TimeUnit;
 import java.util.concurrent.TimeoutException;
@@ -21,13 +19,12 @@ public final class ServerImpl {
 
     public static void main(String[] args)
             throws IOException, ExecutionException, InterruptedException, TimeoutException {
-        int port = Integer.parseInt(args[Integer.parseInt(args[3])]);
-        String url = "http://localhost:" + port;
-        Path path = Files.createTempDirectory("data" + args[3]);
-        ServiceConfig cfg1 = new ServiceConfig(port, url, List.of("http://localhost:" + args[0], "http://localhost:" + args[1], "http://localhost:" + args[2]), path);
+        int port = 42342;
+        String url = "http://localhost:42342" + port;
+        Path path = Files.createTempDirectory("data");
+        ServiceConfig cfg = new ServiceConfig(port, url, Collections.singletonList(url), path);
         ServiceImpl.Factory factory = new ServiceImpl.Factory();
-
-        Service server = factory.create(cfg1);
+        Service server = factory.create(cfg);
         server.start().get(1, TimeUnit.SECONDS);
     }
 }
